Increased min width of XUL window to avoid creating horizontal scroll bar

--- a/extension/content/browser.css
+++ b/extension/content/browser.css
@@ -29,7 +29,7 @@
 }
 
 #test-pilot-all-studies-window {
-    min-width: 680px !important;
+    min-width: 682px !important;
     min-height: 500px !important;
 }
 
